<resources>
    <string name="app_name">Exercise 1</string>
    <string name="newtask_savetask">Save task</string>
    <string name="no_tasks">No tasks to show</string>
    <string name="hint_importance">1</string>
    <string name="importance_header">Enter task importance:</string>
    <string name="hint_summary">Do OSC homework, all of the exercises</string>
    <string name="header_summary">Enter task summary:</string>
    <string name="hint_title">Finish homework</string>
    <string name="header_title">Enter task title:</string>
</resources>
